2007-12-12  Murray Cumming  <murrayc@murrayc.com>

	* configure.ac:
	* examples/Makefile.am:
	* examples/actor_transformations/main.c: (main):
	Added this example.
	* examples/actor/main.c: (main): Removed the 
	rotation from this example.
	* docs/tutorial/clutter-tut.xml: Actors: Added a 
	transformations sub-section.
	* docs/tutorial/figures/Makefile.am:
	* docs/tutorial/figures/: Added screenshots for 
	actor_events and actor_transformations.

2007-12-10  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/figures/Makefile.am:
	Added docs/tutorial/figures/custom_actor.png

2007-12-10  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/clutter-tut.xml: Put all the text in a sect1 instead of just at 
	the start of a chapter or appendix. Otherwise people will often jump straight past 
	it to the example if the example is the only thing listed in the table of contents.

2007-12-10  Murray Cumming  <murrayc@murrayc.com>

	* examples/custom_actor/main.c: (main): Do not rotate the actor because 
	this obscures the example.
	* examples/custom_actor/triangle_actor.c: (clutter_triangle_paint):
	Paint a triangle with GL instead of a rectangle.

2007-12-10  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/clutter-tut.xml: Effects section, Behaviours section:
	Mention the effects are a simple wrapper around Behaviours, and say when 
	they are not enough.
	Remind people to unref the effect template. 
	* examples/effects/main.c: (main): Unref the effect template.

2007-12-09  Murray Cumming  <murrayc@murrayc.com>

	* examples/full_example/main.c: Limit angles to less than 360, 
	which seems to stop the last item from going around an extra time,
 	but sometimes other items go around an extra time instead.
	The calculations need to be cleaned up when this is working 
	properly.

2007-12-07  Murray Cumming  <murrayc@murrayc.com>

	* configure.ac:
	* docs/tutorial/clutter-tut.xml:
	* docs/tutorial/figures/Makefile.am:
	* examples/Makefile.am: